--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,39 +1,48 @@
-<h1>Listing sites</h1>
 
-<table>
+<div align='center'>
+  <% if flash[:alert] %>
+    <p class="alert alert-error"><%= flash[:alert] %></p>
+  <% end %>
+  <% if flash[:notice] %>
+    <p class="alert alert-success"><%= flash[:notice] %></p>
+  <% end %>
+</div>
+
+
+
+<h4>this is the list of sites</h4>
+<br>
+<div class='well'>
+<%= link_to 'Create new site', new_site_path, :class =>'btn btn-primary'%>
+
+
+</div>
+<br>
+<table class="table table-bordered">
   <tr>
     <th>Location</th>
-    <th>Gps lat</th>
-    <th>Gps lon</th>
     <th>Description</th>
     <th>Difficulty</th>
     <th>Depth</th>
-    <th>Site type</th>
-    <th>Sub type</th>
-    <th>Sink date</th>
-    <th></th>
-    <th></th>
+    <th>Site Type</th>
+    <th>Sub Type</th>
+
     <th></th>
   </tr>
 
 <% @sites.each do |site| %>
   <tr>
     <td><%= site.location %></td>
-    <td><%= site.gps_lat %></td>
-    <td><%= site.gps_lon %></td>
     <td><%= site.description %></td>
     <td><%= site.difficulty %></td>
     <td><%= site.depth %></td>
     <td><%= site.site_type %></td>
     <td><%= site.sub_type %></td>
-    <td><%= site.sink_date %></td>
-    <td><%= link_to 'Show', site %></td>
-    <td><%= link_to 'Edit', edit_site_path(site) %></td>
-    <td><%= link_to 'Destroy', site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td>
+    <%= link_to 'Show', site_path(site), :class => 'btn btn-warning' %>
+    <%= link_to 'Edit', edit_site_path(site), :class => 'btn btn-primary' %>
+    <%= link_to 'Delete site', site_path(site), method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-primary' %>
+    </td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Site', new_site_path %>
