--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= simple_form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,47 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_field :bio %>
-  </div>
-  <div class="field">
-    <%= f.label :pic_url %><br />
-    <%= f.text_field :pic_url %>
-  </div>
-  <div class="field">
-    <%= f.label :twitter_handle %><br />
-    <%= f.text_field :twitter_handle %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br />
-    <%= f.number_field :age %>
-  </div>
-  <div class="field">
-    <%= f.label :dive_count %><br />
-    <%= f.number_field :dive_count %>
-  </div>
-  <div class="field">
-    <%= f.label :hometown %><br />
-    <%= f.text_field :hometown %>
-  </div>
-  <div class="field">
-    <%= f.label :diver_type %><br />
-    <%= f.text_field :diver_type %>
-  </div>
-  <div class="field">
-    <%= f.label :diver_level %><br />
-    <%= f.number_field :diver_level %>
-  </div>
-  <div class="actions">
+
+
+  <div class='well'>
+
+    <%= f.input :email %>
+    <%= f.input :password %>
+    <%= f.input :password_confirmation %>
+
+</div>
+    <%= f.input :pic_url %>
+    <%= f.input :twitter_handle %>
+    <%= f.input :age %>
+    <%= f.input :bio %>
+    <%= f.input :dive_count %>
+    <%= f.input :hometown %>
+    <%= f.input :diver_type %>
+    <%= f.input :diver_level %>
+ 
     <%= f.submit %>
-  </div>
+
 <% end %>
