added 'site_name' to list of items, as well as hints and placeholders to the site form

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <h2>Name:</h2>
+  <%= @site.site_name %>
+</p>
+
+<p>
   <b>Location:</b>
   <%= @site.location %>
 </p>
@@ -24,11 +29,6 @@
   <b>Difficulty:</b>
   <%= @site.difficulty %>
 </p>
-
-
-
-
-
 
 <p>
   <b>Depth:</b>
