--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
 
-
-    <%= f.input :location %>
-    <%= f.input :description %>
-    <%= f.input :difficulty %>
-    <%= f.input :depth %>
-    <%= f.input :site_type, :collection => SITE_TYPES %>
+    <%- f.input :site_name, inline_label: 'Please use the most common name' %>
+    <%= f.input :location, placeholder: 'Chicago, IL' %>
+    <%= f.input :description, placeholder: 'There were TONS of fish at the bottom!' %>
+    <%= f.input :difficulty, hint: 'Just 1 to 5' %>
+    <%= f.input :depth, hint: 'In feet' %>
+    <%= f.input :site_type, :collection => SITE_TYPES, as: :radio_buttons %>
     <%= f.input :sub_type , :collection => SUB_TYPES%>
  
 
