--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -20,6 +20,7 @@
 <br>
 <table class="table table-bordered">
   <tr>
+    <th>Name</th>
     <th>Location</th>
     <th>Description</th>
     <th>Difficulty</th>
@@ -32,6 +33,7 @@
 
 <% @sites.each do |site| %>
   <tr>
+    <td><%= site.site_name %></td>
     <td><%= site.location %></td>
     <td><%= site.description %></td>
     <td><%= site.difficulty %></td>
