--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -17,11 +17,12 @@
     <%= f.input :description, placeholder: 'There were TONS of fish at the bottom!' %>
     <%= f.input :difficulty, hint: 'Just 1 to 5' %>
     <%= f.input :depth, hint: 'In feet' %>
-    <%= f.input :site_type, :collection => SITE_TYPES, as: :radio_buttons %>
-    <%= f.input :sub_type , :collection => SUB_TYPES%>
+    <%= f.input :site_type, :collection => SITE_TYPES %>
+    <%= f.input :sub_type , :collection => SUB_TYPES %>
  
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
