changed h2 back to b for site_name, trying to get it to show up

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <h2>Name:</h2>
+  <b>Site Name:</b>
   <%= @site.site_name %>
-</p>
+</p> 
 
 <p>
   <b>Location:</b>
