--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
 
-    <%- f.input :site_name %>
+    <%= f.input :site_name, placeholder: 'Junk' %>
     <%= f.input :location, placeholder: 'Chicago, IL' %>
     <%= f.input :description, placeholder: 'There were TONS of fish at the bottom!' %>
     <%= f.input :difficulty, hint: 'Just 1 to 5' %>
